# rdma-core

./: CMakeLists.txt
kernel-boot/: rdma-description.rules
kernel-headers/rdma/: ib_user_ioctl_verbs.h  rdma_user_lingbo.h  rdma_user_rxe.h
libibverbs/: verbs.h
libibverbs/examples/: rc_pingpong.c
providers/lingbo/: CMakeLists.txt  lingbo-abi.h  lingbo.c  lingbo.h  lingbo_queue.h  lingbo_trace.c  lingbo_trace.h
providers/lingbo/man/: CMakeLists.txt  rxe.7
providers/rxe/: rxe-abi.h  rxe.c  rxe.h  rxe_queue.h
